@@ -74,6 +74,7 @@ int override_usbids_action (GPParams *, int usb_vendor, int usb_product,
 			    int usb_vendor_modified, int usb_product_modified);
 int debug_action           (GPParams *, const char *debug_logfile_name);
 int list_config_action     (GPParams *);
+int list_all_config_action (GPParams *);
 int get_config_action      (GPParams *, const char *name);
 int set_config_action      (GPParams *, const char *name, const char *value);
 int set_config_index_action      (GPParams *, const char *name, const char *value);
