@@ -1,6 +1,7 @@
 gphoto2 2.4.11.1
 
  * disable aalib by default (--with-aalib to enable)
+ * --list-all-config to dump the full config tree + values
 
 gphoto2 2.4.11
 
